demo/thumb_log.txt
Add-Type failed: System.Exception: (48,16): error CS1069: The type name 'Image' could not be found in the namespace 'System.Drawing'. This type has been forwarded to assembly 'System.Drawing.Common, Version=0.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51' Consider adding a reference to that assembly.
        using (Image img = Image.FromHbitmap(hBmp))
               ^

